...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="@dimen/dialog_edit_length"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_edit_future_time"
            android:textSize="@dimen/title_character_size"
            android:gravity="center"
            android:autofillHints="0"
            android:inputType="number" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_character_size"
            android:id="@+id/dialog_edit_future_time_text" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_edit_future_time_select"
            android:textSize="@dimen/title_character_size"
            android:text="@string/select"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

    <LinearLayout
...
