<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_dialog_edit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/edit_dialog_edit_hint"
        android:autofillHints="0"
        android:gravity="center"
        android:layout_marginTop="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/edit_dialog_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/edit_dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>
